--- a/app/src/main/res/layout/fragment_manage_students.xml
+++ b/app/src/main/res/layout/fragment_manage_students.xml
@@ -13,21 +13,20 @@
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Danh sách máy tính"
+            android:text="Danh sách sinh viên"
             android:textSize="20sp"
             android:textStyle="bold"
             android:gravity="center"
             android:padding="16dp" />
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/rvComputers"
+            android:id="@+id/rvStudents"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:padding="8dp"/>
     </LinearLayout>
 
-    <!-- Nút FloatingActionButton để thêm máy tính -->
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="56dp"
@@ -39,7 +38,7 @@
         app:cardElevation="8dp">
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fabAddComputer"
+            android:id="@+id/fabAddStudent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/teal_700"
